# carrie_vision

./: .gitignore  README.md  activate_env.ps1  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.py  setup_project.ps1
.github/: copilot-instructions.md
.github/instructions/: instructions.md
.github/workflows/: tests.yml
carrie_vision/: __init__.py  filters.py  image_processor.py
data/processed/: ring_metrics.csv
data/processed/circles/: detections.csv  detections.json
data/scripts/: analyze_roi_ring_metrics.py  analyze_roi_ring_metrics_helpers.py  capture_raw_camera_image.py  extract_center_roi.py  extract_center_roi_helpers.py  run_circle_pipeline.py
full_pipeline/metrics/: ring_metrics.csv
notebooks/: test1.ipynb
src/carrievision/: image_helpers.py
tests/: conftest.py  test_filters.py  test_image_processor.py
